[package]
name = "seed_style"
version = "0.1.0"
authors = ["rebo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
illicit = "0.9.2"
harsh = "0.1.6"
seed_style_macros = {path="seed_style_macros"}
lazy_static = "1.4.0"
wasm-bindgen = "^0.2.55"
ordered-float = "1.0.2"
anymap = "0.12.1"
derive_more = "0.99.5"
seed = {git = "https://github.com/seed-rs/seed.git"}
seed_hooks = "0.1.2"
objekt-clonable = "0.2.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.8" 

[dependencies.web-sys]
version = "^0.3.36"
features = [
  'HtmlElement',
  "HtmlDocument",
  "HtmlCollection",
  "HtmlStyleElement",
  "MediaQueryList",
]


