[package]
name = "seed_style_preview"
version = "0.1.1"
authors = ["rebo"]
edition = "2018"
description = "CSS Styling for Seed web apps"
license = "Apache-2.0 OR MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
illicit = "0.9.2"
harsh = "0.1.6"
seed_style_macros = "0.1.0"
wasm-bindgen = "^0.2.62"
ordered-float = "1.0.2"
anymap = "0.12.1"
derive_more = "0.99.5"
seed = "0.7.0"
seed_hooks = "0.1.3"
objekt-clonable = "0.2.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.12" 

[dependencies.web-sys]
version = "^0.3.39"
features = [
  'HtmlElement',
  "HtmlDocument",
  "HtmlCollection",
  "StyleSheet",
  "CssRuleList",
  "CssStyleSheet",
  "HtmlStyleElement",
  "MediaQueryList",
]


