[package]
name = "seed_style_preview"
version = "0.1.8"
authors = ["rebo"]
edition = "2018"
description = "CSS Styling for Seed web apps"
license = "Apache-2.0 OR MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
illicit = "0.9.2"
harsh = "0.1.6"
seed_style_macros = {path="./seed_style_macros"}
# seed_style_macros = "0.1.4"
wasm-bindgen = "^0.2.62"
ordered-float = "1.0.2"
anymap = "0.12.1"
derive_more = "0.99.5"
# This commit points to Seed 0.7.0 with important fixes.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
seed_hooks = "0.1.4"
objekt-clonable = "0.2.2"
eager = "0.1.0"
rust-hsluv = "0.1.4"

# slotmap = "0.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.12" 

[dependencies.web-sys]
version = "^0.3.40"
features = [
  'HtmlElement',
  "HtmlDocument",
  "HtmlCollection",
  "StyleSheet",
  "CssRuleList",
  "CssStyleSheet",
  "HtmlStyleElement",
  "MediaQueryList",
]


