[package]
name = "seed_style_macros"
version = "0.1.4"
authors = ["rebo"]
edition = "2018"
autotests = false
description = "Macros for CSS Styling for Seed web apps"
license = "Apache-2.0 OR MIT"


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"
# seed = "0.7.0"
[dev-dependencies]
trybuild = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.17",  features = ["full","extra-traits"]}
quote = "1.0.3"
proc-macro2 = "1.0.10"
heck = "0.3.1"
eager = "0.1.0"
# This commit points to Seed 0.7.0 with important fixes.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
darling = "0.10.2"
illicit = "1.1.0"

seed_hooks = { git = "https://github.com/rebo/seed_hooks"}
# seed_hooks = {path = "../../seed_hooks"}
# seed_hooks = "0.1.3"